# multimodal-fusion-jailbreaks

./: .gitignore  .gitmodules  .python-version  CONTRIBUTING.md  README.md  pyproject.toml
data/results/single_prompt/embed/prompt0_image2/generations/: jbb_completions_train.json  jbb_completions_train_shortcut.json
data/results/single_prompt/embed/prompt0_image2/images/: BEST  FINAL.pth  step100_auto  step200_auto
experiments/attacks/single_image/embed/: prompt0_image2.yaml
experiments/attacks/single_image/vocab/: prompt0_image2_1prevent.yaml
experiments/attacks/transfer/embed/: 10prompts.yaml
experiments/attacks/transfer/vocab/: 10prompts.yaml
experiments/train_shortcut/: embed_cosine.yaml  vocab.yaml
src/fusion_jailbreaks/: config.py  run_attack.py  train.py  utils.py
src/fusion_jailbreaks/eval/: __init__.py  compute_perplexity.py  eval_gcg.py  evaluation.py  transferability_llava.py
